# cairo-args-runner

./: .gitignore  Cargo.toml  README.md  Scarb.toml  input.json  run.sh
examples/arrays2/: Scarb.toml
examples/arrays2/src/: lib.cairo
examples/arrays3/: Scarb.toml
examples/arrays3/src/: lib.cairo
examples/complex/: Scarb.toml
examples/complex/src/: lib.cairo
examples/e0_init/: Scarb.toml
examples/e1_struct_with_values/: Scarb.toml
examples/e1_struct_with_values/src/: lib.cairo
examples/e2_arrays/: Scarb.toml
examples/e2_arrays/src/: lib.cairo
examples/e3_struct_with_array/: Scarb.toml
examples/e3_struct_with_array/src/: lib.cairo
examples/e4_struct_with_arrays/: Scarb.toml
examples/e4_struct_with_arrays/src/: lib.cairo
examples/fib/: Scarb.toml
examples/fib/src/: lib.cairo
examples/lengths/: Scarb.toml
examples/lengths/src/: lib.cairo
examples/serialization1/: Scarb.toml
examples/serialization1/src/: lib.cairo
examples/serialization2/: Scarb.toml
examples/serialization2/src/: lib.cairo
examples/structs/: Scarb.toml
examples/structs/src/: lib.cairo
examples/sum/: Scarb.toml
examples/sum/src/: lib.cairo
src/: errors.rs  lib.rs  macros.rs
src/utils/: args.rs  compile.rs  deserialization.rs  generate.rs  logger.rs  mod.rs  parse.rs  run.rs
