[package]
authors = [
  "Paweł Nowak <neotheprogramist@proton.me>, Szymon Wojtulewicz <szymon.wojtulewicz@gmail.com>",
]
categories = ["command-line-utilities", "development-tools", "parsing"]
description = "Cairo Args Runner is a utility designed to execute Cairo programs with arguments directly from the command line."
edition = "2021"
keywords = ["cairo", "runner", "sierra", "cairo-lang"]
license-file = "LICENSE"
name = "cairo-args-runner"
readme = "README.md"
repository = "https://github.com/neotheprogramist/cairo-args-runner"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cairo-args-runner"
path = "src/bin/main.rs"

[dependencies]
cairo-felt = "0.9"
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
thiserror = "1.0"
