[package]
authors = [
  "Paweł Nowak <neotheprogramist@proton.me>, Szymon Wojtulewicz <szymon.wojtulewicz@gmail.com>",
]
categories = ["command-line-utilities", "development-tools", "parsing"]
description = "Cairo Args Runner is a utility designed to execute Cairo programs with arguments directly from the command line."
edition = "2021"
keywords = ["cairo", "runner", "sierra", "cairo-lang"]
license-file = "LICENSE"
name = "cairo-args-runner"
readme = "README.md"
repository = "https://github.com/neotheprogramist/cairo-args-runner"
version = "2.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cairo-args-runner"
path = "src/bin/main.rs"

[dependencies]
cairo-felt = "0.9.1"
cairo-lang-compiler = "2.5.4"
cairo-lang-diagnostics = "2.5.4"
cairo-lang-runner = "2.5.4"
cairo-lang-sierra = "2.5.4"
cairo-lang-sierra-generator = "2.5.4"
cairo-lang-starknet = "2.5.4"
cairo-lang-utils = "2.5.4"
clap = { version = "4.5.1", features = ["derive"] }
num-bigint = "0.4.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
termcolor = "1.4.1"
thiserror = "1.0.57"
